# Accept

./: README.md  pyproject.toml  setup.cfg
src/Accept/: __init__.py  accept.py
