[metadata]
name = Accept
description = Python interface for the IBA myQA Accept software.
version = 0.0.1
author = Phillip Duncan-Gelder
license = GPL-2.0-Only
license_file = LICENSE.md
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12

[options]
package_dir =
    =src
packages = find:
include_package_data = True
install_requires =
    numpy >= 1.26.3
python_requires = >=3.10

zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest >= 7.0
    pytest-cov >= 2.0
    mypy >= 0.910
    flake8 >= 4.0.0
    tox >= 3.24
develop =
    commitizen >= 2.42.1
    pre-commit >= 3.1.0
    ruff >= 0.0.278
    autopep8 >= 1.6.0
docs =
    sphinx >= 3.5
    sphinx_rtd_theme >= 1.1.1
    myst-parser >= 0.18.1
    linkify-it-py >= 2.0.0

[flake8]
max-line-length = 160
per-file-ignores = __init__.py:F401